--- a/extra.tex
+++ b/extra.tex
@@ -2,19 +2,12 @@
 % Copyright (c)  2009  Charles R. Severance
 
 % Permission is granted to copy, distribute and/or modify this
-% document under the terms of the GNU Free Documentation License,
-% Version 1.1  or any later version published by the Free Software
-% Foundation; with no Invariant Sections, no Front-Cover Texts,
-% and no Back-Cover Texts.
+% document under the terms of the 
+% 
+% Creative Commons Attribution 3.0 - Share Alike Unported
+% (or a later CC-SA) license
 
-% This distribution includes a file named fdl.tex that contains the text
-% of the GNU Free Documentation License.  If it is missing, you can obtain
-% it from www.gnu.org or by writing to the Free Software Foundation,
-% Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
-%
-
-% This is extra material which has been moved outside the book
-% Some may be moved back in as the scope of the book evolves
+% http://creativecommons.org/licenses/by-sa/3.0/
 
 \chapter{Classes and objects}
 
