--- a/book.tex
+++ b/book.tex
@@ -8453,7 +8453,7 @@ treats words as tokens separated by spaces, we would treat the
 words ``soft!'' and ``soft'' as {\em different} words and create
 a separate dictionary entry for each word.
 
-Also since the file has capitalization, we will treat
+Also since the file has capitalization, we would treat
 ``who'' and ``Who'' as different words with different 
 counts.
 
