--- a/more.tex
+++ b/more.tex
@@ -468,6 +468,99 @@ to some or of the files.  All of these are pretty
 straighforward once you understand how {\tt os.walk}
 and the other {\tt os} utilities can be used.
 
+\section{Command line arguments}
+
+\index{arguments}
+
+In earlier chapters, we had a number of programs that prompted
+for a file name using \verb"raw_input" and then read data 
+from the file and processed the data as follows:
+
+\beforeverb
+\begin{verbatim}
+name = raw_input("Enter file:")
+handle = open(name, "r")
+text = handle.read()
+...
+\end{verbatim}
+\afterverb
+%
+We can simplify this program a bit by taking the file name
+from the command line where we start Python.  Up to now,
+we simply run our Python programs and respond to the 
+prmompts as as follows:
+
+\beforeverb
+\begin{verbatim}
+python words.py
+Enter file: mbox-short.txt
+...
+\end{verbatim}
+\afterverb
+%
+We can place additional parameters after the Python file and access
+those parameters in our Python program.  Here is a simple program 
+that demonstrates reading parameters from the command line:
+
+\beforeverb
+\begin{verbatim}
+import sys
+print 'Count:', len(sys.argv)
+print 'Type:', type(sys.argv)
+for arg in sys.argv:
+   print 'Argument:', arg
+\end{verbatim}
+\afterverb
+%
+The contents of {\tt sys.argv} are a list of strings where the first string
+is the name of the Python program and the remaining strings are the parameters
+on the command line after the Python file.
+
+The following shows our program reading several parameters from the command
+line:
+
+\beforeverb
+\begin{verbatim}
+python argtest.py hello there
+Count: 3
+Type: <type 'list'>
+Argument: argtest.py
+Argument: hello
+Argument: there
+\end{verbatim}
+\afterverb
+%
+There are three arguments are passed into our program as a three-element list.  
+The first element of the list is the file name (argtest.py) and the others are 
+the two parameters after the file name.
+
+We can rewrite our program to read the file, taking the file name from the parameter
+as follows:
+\beforeverb
+\begin{verbatim}
+import sys
+
+name = sys.argv[1]
+handle = open(name, "r")
+text = handle.read()
+print name, 'is', len(text), 'bytes'
+\end{verbatim}
+\afterverb
+%
+We take the second parameter as the name of the file (skipping past
+the program name in the {\tt [0]} entry).  We open the file and read 
+the contents as follows:
+
+\beforeverb
+\begin{verbatim}
+python argfile.py mbox-short.txt
+mbox-short.txt is 94626 bytes
+\end{verbatim}
+\afterverb
+%
+Using parameters as input can make it easier to reuse your Python programs 
+especially when you only need to input one or two strings.
+
 \section{Pipes}
 
 \index{shell}
@@ -547,6 +640,8 @@ directory is stored that starts at the ``top of the tree of directories''
 so that it can be used to access the file or directory regardless
 of the current working directory.
 \index{path!absolute}
+
+\item[argument:] Parameters on the command line after the Python file name.
 
 \item[checksum:] See also {\bf hashing}.  The term ``checksum'' 
 comes from the need to verify if data was garbled as it was 
